clusters/homelab/apps/dawarich/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: dawarich
spec:
  ports:
    - name: http
      port: 80
      targetPort: 3000
  selector:
    app: dawarich
